--- a/app/src/main/res/layout/row_subquery_list_item.xml
+++ b/app/src/main/res/layout/row_subquery_list_item.xml
@@ -22,9 +22,9 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:drawableEnd="@drawable/ic_keyboard_arrow_right_dark_gray"
-            android:text="@{item.name}"
             android:gravity="center_vertical"
-            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+            android:text="@{item.name}"
+            android:textAppearance="@style/TextAppearance.AppCompat.Small"
             android:textColor="@color/semi_black"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
