--- a/app/src/main/res/layout/dialog_redeem_tarrakki_zyaada.xml
+++ b/app/src/main/res/layout/dialog_redeem_tarrakki_zyaada.xml
@@ -260,6 +260,7 @@
             android:text="@string/upto_rs_50_000_or_90_of_the_current_investment_values_whichever_is_lower"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
             android:textColor="@color/notes_color"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/btnInvest" />
