--- a/app/src/main/res/layout/fragment_performance.xml
+++ b/app/src/main/res/layout/fragment_performance.xml
@@ -401,8 +401,8 @@
                     android:layout_marginTop="@dimen/default_space"
                     android:layout_marginBottom="@dimen/space_8"
                     android:text="@string/disclaimer_expected_returns"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                     android:textColor="@color/disclaimer_color"
-                    android:textSize="@dimen/sp9"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/rvEarned" />
