--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -94,16 +94,18 @@
 
             <CheckBox
                 android:id="@+id/cbKeepMeSignIn"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/space_8"
                 android:button="@drawable/selector_check_box"
                 android:checked="true"
                 android:fontFamily="@font/lato_semibold"
-                android:gravity="center"
+                android:gravity="center|start"
                 android:padding="@dimen/space_8"
                 android:text="@string/keep_me_sign_in"
                 android:textColor="@color/white"
+                app:layout_constraintEnd_toStartOf="@id/tvForgotPassword"
+                app:layout_constraintHorizontal_bias="0"
                 app:layout_constraintStart_toStartOf="@+id/edtPassword"
                 app:layout_constraintTop_toBottomOf="@id/edtPassword" />
 
@@ -115,7 +117,9 @@
                 android:text="@string/forgot_password_"
                 android:textColor="@color/white"
                 app:layout_constraintBaseline_toBaselineOf="@id/cbKeepMeSignIn"
-                app:layout_constraintEnd_toEndOf="@id/edtPassword" />
+                app:layout_constraintEnd_toEndOf="@id/edtPassword"
+                app:layout_constraintHorizontal_bias="1"
+                app:layout_constraintStart_toEndOf="@id/cbKeepMeSignIn" />
 
             <Button
                 android:id="@+id/btnLogin"
