--- a/app/src/main/res/layout/activity_inroduction.xml
+++ b/app/src/main/res/layout/activity_inroduction.xml
@@ -17,22 +17,21 @@
 
         <ImageView
             android:id="@+id/img_intro_logo"
-            android:layout_width="225dp"
-            android:layout_height="wrap_content"
+            android:layout_width="@dimen/_225sdp"
+            android:layout_height="@dimen/_40sdp"
             android:layout_centerHorizontal="true"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="@dimen/space_32"
-            android:layout_marginBottom="@dimen/space_16"
+            android:layout_marginTop="@dimen/default_space"
             android:adjustViewBounds="true"
             android:src="@drawable/ic_login" />
 
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:cardCornerRadius="@dimen/space_5"
             android:layout_above="@id/lyt_bottom_intro"
             android:layout_below="@id/img_intro_logo"
             android:layout_margin="@dimen/space_16"
+            app:cardCornerRadius="@dimen/space_5"
             app:cardUseCompatPadding="true">
 
             <RelativeLayout
@@ -62,13 +61,13 @@
             android:layout_alignParentBottom="true"
             android:layout_marginStart="@dimen/space_40"
             android:layout_marginEnd="@dimen/space_40"
-            android:layout_marginBottom="@dimen/space_20"
+            android:layout_marginBottom="@dimen/default_space"
             android:orientation="horizontal">
 
             <Button
                 android:id="@+id/btn_new_user"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="@dimen/_40sdp"
                 android:layout_marginEnd="@dimen/space_8"
                 android:layout_weight="1"
                 android:background="@drawable/shape_btn_idle_bg"
@@ -80,7 +79,7 @@
             <Button
                 android:id="@+id/btn_existing_user"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="@dimen/_40sdp"
                 android:layout_marginStart="@dimen/space_8"
                 android:layout_weight="1"
                 android:background="@drawable/shape_btn_idle_bg"
