--- a/app/src/main/res/layout/fragment_explore_all_invest_funds.xml
+++ b/app/src/main/res/layout/fragment_explore_all_invest_funds.xml
@@ -32,7 +32,7 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="@dimen/_82sdp"
+                    android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/default_space"
                     android:layout_marginTop="@dimen/default_space"
                     android:layout_marginEnd="@dimen/default_space"
@@ -59,7 +59,7 @@
                             android:src="@drawable/ic_explore" />
 
                     </android.support.v7.widget.CardView>
-
+                    <!--tools:textAppearance="@style/TextAppearance.AppCompat.Large"-->
                     <TextView
                         android:id="@+id/btnExploreFunds"
                         android:layout_width="match_parent"
